--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     - pip install torch==1.3.0+cpu torchvision==0.4.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
+    - pip install coveralls
     - pip freeze
 
 branches:
@@ -81,4 +82,4 @@ jobs:
           script: pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
 
 after_success:
-          - bash <(curl -s https://codecov.io/bash)
+          - coveralls
