--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     - pip install torch==1.3.0+cpu torchvision==0.4.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
-    - pip install coveralls
+    - pip install python-coveralls
     - pip freeze
 
 branches:
