Fix .travis.yml to use sourceline

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 addons:
     apt:
         sources:
-            - ubuntu-toolchain-r-test
+            - sourceline: "ppa:ubuntu-toolchain-r/test"
         packages:
             - gcc-8
             - g++-8
