Avoid _get_init_params() if init_params is provided

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-line-length = 120
 exclude = docs/src, build, dist, .ipynb_checkpoints
-ignore = E741
+extend-ignore = E741
 
 [isort]
 line_length = 120
