--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ install:
     # Keep track of pyro-api master branch
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     - pip install torch==1.4.0+cpu torchvision==0.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
-    - pip install git+git://github.com/pyro-ppl/funsor.git@master#egg=funsor[torch]
     - pip install .[test]
+    - pip install git+https://github.com/pyro-ppl/funsor.git@master#egg=funsor[torch]
     - pip install coveralls
     - pip freeze
 
