--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     - pip install torch==1.4.0+cpu torchvision==0.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
-    - pip install git+https://github.com/pyro-ppl/funsor.git@master#egg=funsor[torch]
+    - pip install git+https://github.com/pyro-ppl/funsor.git@lint-py3.5#egg=funsor[torch]
     - pip install coveralls
     - pip freeze
 
