--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,6 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     - pip install torch==1.4.0+cpu torchvision==0.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
-    - pip install git+https://github.com/pyro-ppl/funsor.git@lint-py3.5#egg=funsor[torch]
     - pip install coveralls
     - pip freeze
 
@@ -80,6 +79,11 @@ jobs:
         - name: integration batch_2
           python: 3.5
           script: pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
+        - name: funsor
+          python: 3.6
+          script:
+              - pip install git+https://github.com/pyro-ppl/funsor.git@master#egg=funsor[torch]
+              - pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor
 
 after_success:
           - coveralls
