--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
     - pip install -U pip
     # Keep track of pyro-api master branch
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
-    - pip install torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+    - pip install torch==1.4.0+cpu torchvision==0.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
     - pip install coveralls
     - pip freeze
@@ -72,13 +72,18 @@ jobs:
           script:
               - CI=1 pytest -vs --cov=pyro --cov-config .coveragerc --stage test_examples --durations 10
               - grep -l smoke_test tutorial/source/*.ipynb | xargs grep -L 'smoke_test = False' \
-                  | CI=1 xargs pytest -vx --nbval-lax --current-env -W ignore::FutureWarning
+                  | CI=1 xargs pytest -vx --nbval-lax --current-env
         - name: integration batch_1
           python: 3.5
           script: pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_1 --durations 10
         - name: integration batch_2
           python: 3.5
           script: pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
+        - name: funsor
+          python: 3.6
+          script:
+              - pip install git+https://github.com/pyro-ppl/funsor.git@master#egg=funsor[torch]
+              - pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor --durations 10
 
 after_success:
           - coveralls
