Initialize contrib.funsor with new primitives, pyroapi backend, and some tests (#2583)

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,11 @@ jobs:
         - name: integration batch_2
           python: 3.5
           script: pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
+        - name: funsor
+          python: 3.5
+          script:
+              - pip install -e .[funsor]
+              - pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor --durations 10
 
 after_success:
           - coveralls
