Fix .nonzero() usage

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ known_third_party = opt_einsum, six, torch, torchvision
 filterwarnings = error
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.dtype size changed:RuntimeWarning
+    ignore:Mixed memory format inputs detected:UserWarning
     ignore::DeprecationWarning
     once::DeprecationWarning
 
