Fixes for PyTorch 1.7 release

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ filterwarnings = error
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.dtype size changed:RuntimeWarning
     ignore:Mixed memory format inputs detected:UserWarning
+    ignore:Setting attributes on ParameterDict:UserWarning
     ignore::DeprecationWarning
     once::DeprecationWarning
 
