Avoid https://github.com/pytorch/pytorch/issues/47038

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ filterwarnings = error
     ignore:Mixed memory format inputs detected:UserWarning
     ignore:Setting attributes on ParameterDict:UserWarning
     ignore::DeprecationWarning
+    ignore:CUDA initialization:UserWarning
     once::DeprecationWarning
 
 doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
