--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,12 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     # Download PyTorch
     - pip install numpy
-    - pip install torch torchvision -f https://download.pytorch.org/whl/test/cpu/torch_test.html
-    # TODO replace with stable before release
+    # TODO replace with torch_stable before release
     # - pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+    # TODO replace with torch_test once torchvision binaries are released
+    # - pip install torch torchvision -f https://download.pytorch.org/whl/test/cpu/torch_test.html
+    # This is the last nightly release of 1.8.0 before splitting to 1.9.0.
+    - pip install --pre torch==1.8.0.dev20210210+cpu torchvision==0.9.0.dev20210210+cpu -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
     - pip install .[test]
     - pip install coveralls
     - pip freeze
