--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ pyro/_version.py
 processed
 raw
 *.pkl
+baseline_net_q1.pth
+cvae_net_q1.pth
+cvae_plot_q1.png
+prep_seal_data.csv
+results.csv
 
 # Logs
 logs
