--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ install:
     - pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
     # Download PyTorch
     - pip install numpy
-    # TODO replace with torch_stable before release
-    # - pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
-    - pip install torch==1.8.0+cpu torchvision==0.9.0 -f https://download.pytorch.org/whl/test/cpu/torch_test.html
+    - pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - pip install .[test]
     - pip install coveralls
     - pip freeze
