--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,13 @@ jobs:
               - pip install -r docs/requirements.txt
               - make docs
               - make doctest
+        - name: type_check
+          python: 3.6
+          script:
+              - pip install mypy
+              - ls
+              - pwd
+              - mypy pyro/optim
         - name: perf
           python: 3.6
           script:
@@ -87,11 +94,6 @@ jobs:
               - pip install -e .[funsor]
               - pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor --durations 10
               - CI=1 pytest -vs --cov=pyro --cov-config .coveragerc --stage test_examples --durations 10 -k funsor
-        - name: type_check
-          python: 3.6
-          script:
-              - pip install mypy
-              - mypy pyro/optim
 
 after_success:
           - coveralls
