--- a/.travis.yml
+++ b/.travis.yml
@@ -59,9 +59,7 @@ jobs:
           python: 3.6
           script:
               - pip install mypy
-              - ls
-              - pwd
-              - cd pyro && mypy optim
+              - mypy pyro
         - name: perf
           python: 3.6
           script:
