--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,6 +7,9 @@ warn_unused_configs = True
 
 # Per-module options:
 
+[mypy-pyro._version.*]
+ignore_errors = True
+
 [mypy-pyro.contrib.*]
 ignore_errors = True
 
