--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,13 @@ jobs:
               - pip install -r docs/requirements.txt
               - make docs
               - make doctest
+        - name: type_check
+          python: 3.6
+          script:
+              - pip install mypy==0.812
+              - pwd
+              - ls
+              - mypy pyro
         - name: perf
           python: 3.6
           script:
