--- a/setup.cfg
+++ b/setup.cfg
@@ -35,43 +35,45 @@ column_limit = 120
 python_version = 3.6
 warn_return_any = True
 warn_unused_configs = True
+warn_incomplete_stub = True
 
 # Per-module options:
 
 [mypy-pyro._version.*]
 ignore_errors = True
-warn_incomplete_stub = True
 
 [mypy-pyro.contrib.*]
 ignore_errors = True
-warn_incomplete_stub = True
 
 [mypy-pyro.distributions.*]
 ignore_errors = True
-warn_incomplete_stub = True
 warn_unused_ignores = True
 
 [mypy-pyro.generic.*]
 ignore_errors = True
-warn_incomplete_stub = True
 warn_unused_ignores = True
 
 [mypy-pyro.infer.*]
 ignore_errors = True
-warn_incomplete_stub = True
 warn_unused_ignores = True
 
 [mypy-pyro.nn.*]
 ignore_errors = True
-warn_incomplete_stub = True
 warn_unused_ignores = True
 
-[mypy-pyro.ops.*]
+[mypy-pyro.ops.einsum]
+ignore_errors = True
+warn_unused_ignores = True
+
+[mypy-pyro.ops.contract]
+ignore_errors = True
+warn_unused_ignores = True
+
+[mypy-pyro.ops.tensor_utils]
 ignore_errors = True
 warn_unused_ignores = True
 
 [mypy-pyro.optm.*]
-warn_incomplete_stub = True
 warn_unused_ignores = True
 
 [mypy-pyro.params.*]
@@ -83,5 +85,4 @@ ignore_errors = True
 
 [mypy-pyro.util.*]
 ignore_errors = True
-warn_incomplete_stub = True
 warn_unused_ignores = True
