Ignore missing imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ python_version = 3.6
 warn_return_any = True
 warn_unused_configs = True
 warn_incomplete_stub = True
+ignore_missing_imports = True
 
 # Per-module options:
 
