--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,15 @@ warn_unused_ignores = True
 ignore_errors = True
 warn_unused_ignores = True
 
-[mypy-pyro.ops.*]
+[mypy-pyro.ops.einsum]
+ignore_errors = True
+warn_unused_ignores = True
+
+[mypy-pyro.ops.contract]
+ignore_errors = True
+warn_unused_ignores = True
+
+[mypy-pyro.ops.tensor_utils]
 ignore_errors = True
 warn_unused_ignores = True
 
