add python headers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
@@ -72,6 +73,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
@@ -99,6 +101,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
@@ -128,6 +131,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
@@ -155,6 +159,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.8.0+cpu torchvision==0.9.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
@@ -182,6 +187,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -U pip wheel setuptools
+          sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
