--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install -U pip wheel setuptools
+        python -m pip install --upgrade pip wheel setuptools
         pip install flake8 isort>=5.0 mypy nbstripout nbformat
     - name: Lint with flake8
       run: |
@@ -45,7 +45,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
@@ -72,7 +72,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
@@ -100,7 +100,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
@@ -130,7 +130,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
@@ -158,7 +158,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
@@ -186,7 +186,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          pip install -U pip wheel setuptools
+          python -m pip install --upgrade pip wheel setuptools
           sudo apt-get install python-dev
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
