--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ filterwarnings = error
     ignore::DeprecationWarning
     ignore:CUDA initialization:UserWarning
     ignore:floor_divide is deprecated:UserWarning
+    ignore:torch.tensor results are registered as constants in the trace
     once::DeprecationWarning
 
 doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
