--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel setuptools
-        pip install flake8 isort>=5.0 mypy nbstripout nbformat
-    - name: Lint with flake8
+        pip install flake8 black isort>=5.0 mypy nbstripout nbformat
+    - name: Lint
       run: |
         make lint
   docs:
