--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
   # https://github.com/TheKevJames/coveralls-python/blob/master/docs/usage/configuration.rst#github-actions-support
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   COVERALLS_PARALLEL: true
+  COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
   COVERALLS_SERVICE_NAME: github
 
 
@@ -91,7 +92,7 @@ jobs:
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage unit --durations 20
       - name: Submit to coveralls
-        run: GITHUB_SHA="$GITHUB_RUN_ID" GITHUB_REF="" coveralls --service=github
+        run: coveralls --service=github
   examples:
     runs-on: ubuntu-20.04
     needs: docs
@@ -122,7 +123,7 @@ jobs:
           grep -l smoke_test tutorial/source/*.ipynb | xargs grep -L 'smoke_test = False' \
                             | CI=1 xargs pytest -vx --nbval-lax --current-env
       - name: Submit to coveralls
-        run: GITHUB_SHA="$GITHUB_RUN_ID" GITHUB_REF="" coveralls --service=github
+        run: coveralls --service=github
   integration_1:
     runs-on: ubuntu-20.04
     needs: docs
@@ -151,7 +152,7 @@ jobs:
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_1 --durations 10
       - name: Submit to coveralls
-        run: GITHUB_SHA="$GITHUB_RUN_ID" GITHUB_REF="" coveralls --service=github
+        run: coveralls --service=github
   integration_2:
     runs-on: ubuntu-20.04
     needs: docs
@@ -180,7 +181,7 @@ jobs:
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
       - name: Submit to coveralls
-        run: GITHUB_SHA="$GITHUB_RUN_ID" GITHUB_REF="" coveralls --service=github
+        run: coveralls --service=github
   funsor:
     runs-on: ubuntu-20.04
     needs: docs
@@ -211,13 +212,10 @@ jobs:
           pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor --durations 10
           CI=1 pytest -vs --cov=pyro --cov-config .coveragerc --stage test_examples --durations 10 -k funsor
       - name: Submit to coveralls
-        run: GITHUB_SHA="$GITHUB_RUN_ID" GITHUB_REF="" coveralls --service=github
+        run: coveralls --service=github
   finish:
     needs: [unit, examples, integration_1, integration_2, funsor]
     runs-on: ubuntu-20.04
     steps:
     - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        parallel-finished: true
+      run: coveralls --service=github --finish
